--- a/f2h2h1.github.io/在Windows下安装Magento2.html
+++ b/f2h2h1.github.io/在Windows下安装Magento2.html
@@ -131,12 +131,12 @@
 </li>
 </ol>
 </li>
-<li>修改 hosts 文件，把域名 localhost-magento 指向本地 ip （其实这步没有也没关系，但为了方便下文的描述还是加上了这步）</li>
+<li>修改 hosts 文件，把域名 localhost-magento.com 指向本地 ip （其实这步没有也没关系，但为了方便下文的描述还是加上了这步）</li>
 <li>在数据库里新建对应的库<pre><code> create database magento2ce;
 </code></pre>
 </li>
 <li>运行安装命令<pre><code> php bin/magento setup:install `
-     --base-url=http://localhost-magento/ `
+     --base-url=http://localhost-magento.com/ `
      --db-host=localhost `
      --db-name=magento2ce `
      --db-user=root `
@@ -169,7 +169,7 @@
      access_log  logs/localhost-magento.access.log;
      error_log  logs/localhost-magento.error.log;
 
-     server_name  localhost-magento;
+     server_name  localhost-magento.com;
      set $MAGE_ROOT C:/code/magento-community; # 这里是 magento 的根目录
      set $MAGE_DEBUG_SHOW_ARGS 1;
      include C:/code/magento-community/nginx.conf.sample; # 这里是 magento 的根目录里的 nginx.conf.sample
@@ -181,7 +181,7 @@
  }
 </code></pre>
 </li>
-<li>重启 nginx 然后在浏览器里输入 localhost-magento ，如无意外能看到 magento 的 home page</li>
+<li>重启 nginx 然后在浏览器里输入 localhost-magento.com ，如无意外能看到 magento 的 home page</li>
 <li>安装示例数据，这一步不是必须的<ol>
 <li>查看当前模式<pre><code>php bin/magento deploy:mode:show
 </code></pre>
@@ -259,15 +259,6 @@
                   'database' =&gt; '0',
                   'port' =&gt; '6379'
               ],
-          ],
-          'page_cache' =&gt; [
-              'backend' =&gt; 'Cm_Cache_Backend_Redis',
-              'backend_options' =&gt; [
-                  'server' =&gt; '127.0.0.1',
-                  'port' =&gt; '6379',
-                  'database' =&gt; '1',
-                  'compress_data' =&gt; '0'
-              ]
           ]
       ]
   ],
@@ -316,9 +307,11 @@
 <pre><code>  clone 整个仓库后再切换分支
   git clone https://github.com/magento/magento2.git .
   git pull
-  git switch 2.4.2-p1
+  git switch 2.4.6-p1
   只 clone 一个分支
-  git clone -b 2.4.2-p1 https://github.com/magento/magento2.git .
+  git clone -b 2.4.6-p1 https://github.com/magento/magento2.git --depth=1 .
+  只 clone 一个分支，以更快的方式
+  git clone -b 2.4.6-p7 --single-branch --no-tags https://github.com/magento/magento2.git --depth=1 .
 
   切换到对应的 tag
   git pull
@@ -331,9 +324,9 @@
 <li>通过 github 源码安装的 magento 的框架文件在这个目录里 <code>lib/internal/Magento/Framework</code></li>
 <li>如果是通过 github 修改源码的，要记得替换架的路径</li>
 <li>github 代码里的 app/magento/ 下那一堆 模块 对应 通过 composer 安装的 vendor/magento/module-* 的模块</li>
-<li>如果 clone 速度太慢，可以在 releases 那里下载源码的压缩包（如果还是太慢就用一些下载工具来下载 releases 的压缩包）</li>
-</ul>
-<p>配置 vscode 的 xml 文件语法高亮</p>
+<li><p>如果 clone 速度太慢，可以在 releases 那里下载源码的压缩包（如果还是太慢就用一些下载工具来下载 releases 的压缩包）</p>
+</li>
+<li><p>配置 vscode 的 xml 文件语法高亮</p>
 <ol>
 <li>vscode 里装上这个插件<pre><code> XML Language Support by Red Hat
 </code></pre>
@@ -351,6 +344,23 @@
 </code></pre>
 </li>
 </ol>
+</li>
+<li><p>在 vscode 中关掉 git 的自动刷新</p>
+<pre><code>      "git.autorefresh": false
+</code></pre>
+</li>
+<li><p>在 vscode 中可以用这样的配置来忽略一些文件的解析</p>
+<pre><code>      "intelephense.references.exclude": [
+          "**/vendor/**",
+          "generated",
+          "dev",
+          "var",
+          "pub/media",
+          "pub/static"
+      ]
+</code></pre>
+</li>
+</ul>
 <h2>安装 2.4</h2>
 <p>笔者发现 magento2 的每个小版本的系统依赖都有一点不一样
 <a href="https://devdocs.magento.com/guides/v2.4/install-gde/system-requirements.html">https://devdocs.magento.com/guides/v2.4/install-gde/system-requirements.html</a></p>
@@ -394,7 +404,7 @@ $cacheId = implode('-', $this-&gt;scopePriorityScheme) . "-" . $this-&gt;cacheId
 </li>
 <li><p>安装命令要加上 Elasticsearch 的配置</p>
 <pre><code> php bin/magento setup:install  \
-     --base-url=http://localhost-magento/  \
+     --base-url=http://localhost-magento.com/  \
      --db-host=localhost  \
      --db-name=magento2ce2  \
      --db-user=root  \
@@ -414,7 +424,7 @@ $cacheId = implode('-', $this-&gt;scopePriorityScheme) . "-" . $this-&gt;cacheId
      --elasticsearch-index-prefix=magento2
 </code></pre>
 </li>
-<li><p>进入后台之前需要禁用两步验证的模块和刷新缓存，不然会因为没有两步验证而无法进入后台</p>
+<li><p>进入后台之前需要禁用两步验证的模块和刷新缓存，不然会因为没有两步验证而无法进入后台, Magento_TwoFactorAuth 这个模块好像社区版没有</p>
 <pre><code> php bin/magento module:disable Magento_TwoFactorAuth
  php bin/magento cache:flush
 </code></pre>
@@ -588,4 +598,12 @@ echo $startAtTimestamp $endAtTimestamp | awk '{printf("Runtime: %d\n", $2-$1)}'
 
 查看当前版本
 php bin/magento --version
+
+magento 的备份命令
+如何不使用 es 安装 2.4及之后的版本
+
+如何升级 magento
+升级 magento 时要注意些什么
+
+
 --&gt;
