--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8878 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8881 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20376%20%E7%BB%93%E6%9D%9F%E4%BA%86%E5%9C%A8%E4%B8%AD%E5%9B%BD%E7%9A%84%E6%97%85%E8%A1%8C.html>2024-09-06 新爸五年计划 - 376 结束了在中国的旅行</a></li>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E4%B8%83%E6%9C%88%E8%AF%BB%E5%AE%87%E5%AE%99%EF%BC%8C%E6%98%93%E7%BB%8F%EF%BC%8C%E5%8D%9A%E4%BC%BD%E6%A2%B5%E6%AD%8C%EF%BC%8C%E8%A7%89%E9%86%92%EF%BC%8C%E8%AE%A4%E7%9F%A5%E8%A1%8C%E4%B8%BA%E7%96%97%E6%B3%95%EF%BC%8C%E5%93%B2%E5%AD%A6%E2%80%A6%E2%80%A6%2010%20%E6%9C%AC.html>2024-09-06 2024 七月读宇宙，易经，博伽梵歌，觉醒，认知行为疗法，哲学…… 10 本</a></li>
 
 <li><a href=yuanj.top/Bionanoaccess%20%E5%AE%89%E8%A3%85.html>2024-09-02 Bionanoaccess 安装</a></li>
 
@@ -1080,6 +1084,8 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202345%20-%20%E5%A4%9C%E8%B7%91%E4%B8%8E%E7%9D%A1%E7%9C%A0.html>2023-11-13 折返点 2345 - 夜跑与睡眠</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20333%20%E4%B8%87%E5%9C%A3%E8%8A%82%E4%B8%8E%E7%B3%96.html>2023-11-13 新爸五年计划 - 333 万圣节与糖</a></li>
+
+<li><a href=yuanj.top/Resume.html>2023-11-11 Resume</a></li>
 
 <li><a href=lihan3238.github.io/Ubuntu%E4%B8%8B%E5%AE%89%E8%A3%85%E5%8C%85%E6%97%B6%E7%BC%BA%E5%B0%91%E4%BE%9D%E8%B5%96%E7%9A%84%E5%BF%AB%E9%80%9F%E8%A7%A3%E5%86%B3%E6%96%B9%E6%B3%95.html>2023-11-11 Ubuntu下安装包时缺少依赖的快速解决方法</a></li>
 
