--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Sep 2 2024"</h2>
+<h2>updatedDate: "Sep 4 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -18,7 +18,7 @@ order: 4</p>
 <li><a href="#quick-sort">Quick Sort</a></li>
 <li><a href="#merge-sort">Merge Sort</a></li>
 <li><a href="#linked-list">Linked List</a></li>
-<li><a href="#undoredo-stacks">Undo/Redo stacks</a></li>
+<li><a href="#stacks">Stacks</a></li>
 <li><a href="#shuffle-an-array">Shuffle an array</a></li>
 <li><a href="#traverse-binary-tree">Traverse Binary Tree</a></li>
 <li><a href="#graph-dfs">Graph DFS</a></li>
@@ -314,7 +314,29 @@ function removeNthFromEnd(head, n) {
   return dummy.next;
 }
 </code></pre>
-<h3>Undo/Redo stacks</h3>
+<h3>Stacks</h3>
+<pre><code class="lang-js">// Implement Queue using Stacks
+class MyQueue {
+  constructor() {
+    this.s1 = [];
+    this.s2 = [];
+  }
+
+  push(x) {
+    while (this.s1.length &gt; 0) {
+      this.s2.push(this.s1.pop());
+    }
+    this.s1.push(x);
+    while (this.s2.length &gt; 0) {
+      this.s1.push(this.s2.pop());
+    }
+  }
+
+  pop() {
+    return this.s1.pop();
+  }
+}
+</code></pre>
 <pre><code class="lang-js">class UndoRedoManager {
   constructor() {
     this.undoStack = [];
@@ -346,9 +368,6 @@ function removeNthFromEnd(head, n) {
     }
   }
 }
-
-// Oops.js: Add powerful undo/redo capabilities to your app
-// https://github.com/HeyPuter/Oops.js
 </code></pre>
 <h3>Shuffle an array</h3>
 <p>The Art of Computer Programming, Vol. 2, section 3.4.2 “Random sampling and shuffling” describes two solutions:</p>
@@ -1805,6 +1824,37 @@ function checkPerfectSquare(num) {
   return res;  
 };
 </code></pre>
+<p>The next permutation of an array of integers is the next lexicographically greater permutation of its integer. If such arrangement is not possible, the array must be rearranged as the lowest possible order.</p>
+<pre><code class="lang-js">var nextPermutation = function(nums) {
+  // Find the first pair from the right where nums[i] &lt; nums[i+1]
+  let i;
+  for (i = nums.length - 2; i &gt;= 0; i--) {
+    if (nums[i] &lt; nums[i + 1]) {
+      break;
+    }
+  }
+
+  if (i &gt;= 0) {
+    // Find the first number on the right side of nums[i] that is greater than nums[i]
+    let j;
+    for (j = nums.length - 1; j &gt; i; j--) {
+      if (nums[j] &gt; nums[i]) {
+        break;
+      }
+    }
+    [nums[i], nums[j]] = [nums[j], nums[i]];
+  }
+
+  // The subarray to the right of 'i' is guaranteed to be in descending order
+  reverse(nums, i + 1, nums.length - 1);
+}
+
+function reverse(nums, start, end) {
+  for (let left = start, right = end; left &lt; right; left++, right--) {
+    [nums[left], nums[right]] = [nums[right], nums[left]];
+  }
+}
+</code></pre>
 <p>Given an array nums of distinct integers, return all the possible permutations. You can return the answer in any order.</p>
 <pre><code class="lang-js">var permute = function(nums) {
   const result = [];
@@ -2227,5 +2277,36 @@ var maxProfit = function(prices) {
   }
 
   return Math.max(dp[prices.length - 1][1], dp[prices.length - 1][2], dp[prices.length - 1][3]);
+};
+</code></pre>
+<p>You are given k identical eggs and you have access to a building with n floors labeled from 1 to n. There exists a floor f such that any egg dropped at a floor higher than f will break, and any egg dropped at or below floor f will not break.</p>
+<pre><code class="lang-js">var superEggDrop = function(k, n) {
+  // dp[i][j] represents the minimum # of attempts needed with i eggs and j floors
+  let dp = Array.from({ length: k + 1 }, () =&gt; Array.from({ length: n + 1 }, (_, i) =&gt; i));
+  dp[0] = Array(n + 1).fill(0);
+
+  for (let egg = 2; egg &lt;= k; egg++) {
+    for (let flr = 2; flr &lt;= n; flr++) {
+      let low = 1, high = flr;
+      let result = flr; // the worst-case need to try
+
+      while (low &lt; high) {
+        let mid = Math.floor((low + high) / 2);
+        // the # of attempts needed in worst-case
+        let left = dp[egg - 1][mid - 1]; // egg breaks
+        let right = dp[egg][flr - mid];  // egg doesn't break
+
+        result = Math.min(result, 1 + Math.max(left, right));
+
+        // We're trying to minimize `Math.max(left, right)`
+        if (left === right) break;
+        else if (left &lt; right) low = mid + 1;
+        else high = mid - 1;
+      }
+
+      dp[egg][flr] = result;
+    }
+  }
+  return dp[k][n];
 };
 </code></pre>
