--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Sep 4 2024"</h2>
+<h2>updatedDate: "Sep 8 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -450,15 +450,15 @@ var postorderTraversal = function (root) {
 var levelOrderTraversal = function(root) {  
   if (!root) return [];
 
-  const nodeQueue = [root];
+  let nodeQueue = [root];
   let result = [];
 
   while (nodeQueue.length) {
-    const size = nodeQueue.length;
-    const level = [];
+    let size = nodeQueue.length;
+    let level = [];
 
     for (let i = 0; i &lt; size; i++) {
-      const curNode = nodeQueue.shift();
+      let curNode = nodeQueue.shift();
       level.push(curNode.val);
 
       if (curNode.left) {
@@ -653,7 +653,7 @@ MinHeap.prototype.add = function (item) {
 
 // remove the minimum element and need to keep the heap order
 MinHeap.prototype.poll = function () {
-  var item = this.items[0];
+  let item = this.items[0];
   this.items[0] = this.items[this.items.length - 1];
   this.items.pop();
   this.bubbleDown();
@@ -661,7 +661,7 @@ MinHeap.prototype.poll = function () {
 }
 
 MinHeap.prototype.bubbleUp = function () {
-  var index = this.items.length - 1;
+  let index = this.items.length - 1;
   while (this.parent(index) &amp;&amp; this.parent(index) &gt; this.items[index]) {
     this.swap(this.parentIndex(index), index);
     index = this.parentIndex(index);
@@ -669,15 +669,14 @@ MinHeap.prototype.bubbleUp = function () {
 }
 
 MinHeap.prototype.bubbleDown = function () {
-  var index = 0;
-  while (this.leftChild(index) &amp;&amp;
-      (this.leftChild(index) &lt; this.items[index] ||
-      this.rightChild(index) &lt; this.items[index])) {
-    var smallerIndex = this.leftChildIndex(index);
-    if (this.rightChild(index) &amp;&amp; this.rightChild(index) &lt; this.items[smallerIndex]) {
+  let index = 0;
+  while (this.leftChild(index)) {
+    let smallerIndex = this.leftChildIndex(index);
+    if (this.rightChild(index) &amp;&amp; this.rightChild(index) &lt; this.leftChild(index)) {
       smallerIndex = this.rightChildIndex(index);
     }
-    this.swap(smallerIndex, index);
+    if (this.items[index] &lt;= this.items[smallerIndex]) break;
+    this.swap(index, smallerIndex);
     index = smallerIndex;
   }
 }
@@ -738,7 +737,7 @@ let rob2 = function(nums) {
   };
 };
 </code></pre>
-<pre><code class="lang-js">// Compute the fewest number of coins that you need to make up that amount.
+<pre><code class="lang-js">// Compute the fewest number of coins that you need to make up that amount. You have an infinite number of each kind of coin.
 let coinChange = function(coins, amount) {
   if (amount === 0) {
     return 0;
@@ -748,6 +747,7 @@ let coinChange = function(coins, amount) {
 
   for (let i = 1; i &lt; dp.length; i++) {
     for (let j = 0; j &lt; coins.length; j++) {
+      // e.g. dp[11] = min(dp[10], dp[9], dp[6]) + 1
       if (i - coins[j] &gt;= 0) {
         dp[i] = Math.min(dp[i], dp[i - coins[j]] + 1);
       }
@@ -755,30 +755,6 @@ let coinChange = function(coins, amount) {
   }
 
   return dp[dp.length - 1] === Number.MAX_VALUE ? -1 : dp[dp.length - 1];
-};
-</code></pre>
-<pre><code class="lang-js">// Given two strings text1 and text2, return the length of their longest common subsequence.
-// Input: text1 = "abcde", text2 = "ace" 
-// Output: 3. The longest common subsequence is "ace" and its length is 3.
-let longestCommonSubsequence = function(text1, text2) {
-  let m = text1.length;
-  let n = text2.length;
-  // dp[i][j] means the LCS of first i characters in text1 and first j characters in text2
-  // 1. X[m-1] == Y[n-1] -&gt; LCS(Xm-1，Yn-1)
-  // 2. X[m-1] != Y[n-1] -&gt; max(LCS(Xm-1, Yn), LCS(Xm, Yn-1))
-  let dp = Array.from(Array(m + 1), () =&gt; Array(n + 1).fill(0));
-
-  for (let i = 1; i &lt;= m; i++) {
-    for (let j = 1; j &lt;= n; j++) {
-      if (text1[i - 1] === text2[j - 1]) {
-        dp[i][j] = dp[i - 1][j - 1] + 1;
-      } else {
-        dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
-      }  
-    }
-  }
-
-  return dp[m][n];
 };
 </code></pre>
 <h3>LRU</h3>
@@ -1077,12 +1053,13 @@ function isSame(dict1, dict2) {
   let res = [];
 
   for (let i = 0; i &lt; nums.length; i++) {
-    while (nums[i] &gt;= nums[q[q.length - 1]]) {
+    while (q.length &amp;&amp; nums[i] &gt;= nums[q[q.length - 1]]) {
       q.pop();
     }
     q.push(i);
 
     // remove first element if it's outside the window
+    // `i - k + 1` is the left most element of current window
     if (q[0] === i - k) {
       q.shift();
     }
@@ -1112,7 +1089,7 @@ function isSame(dict1, dict2) {
   for (let i = len1; i &lt; len2; i++) {
     count[s2.charCodeAt(i) - 97]--;
     // the character leaving the window, always maintaining a window of size `len1`
-    count[s2.charCodeAt(i-len1) - 97]++;
+    count[s2.charCodeAt(i - len1) - 97]++;
     if (count.every(e =&gt; e === 0)) {
       return true;
     }
@@ -1141,6 +1118,7 @@ function isSame(dict1, dict2) {
     }
   }
 
+  // the size of the final valid window
   return s.length - left;
 };
 </code></pre>
@@ -1246,14 +1224,16 @@ function isSame(dict1, dict2) {
       leftMin--;
       leftMax--;
     } else {
-      leftMin--;
-      leftMax++;
+      leftMin--;  // treating as ')'
+      leftMax++;  // treating as '('
     }
     if (leftMax &lt; 0) return false;
-    if (leftMin &lt; 0) leftMin = 0; // '*' can be treated as empty string
+    // we must have seen '*' earlier in the string
+    // use '*' to balance the excess of closing parentheses
+    if (leftMin &lt; 0) leftMin = 0;
   }
 
-  return leftMin === 0; 
+  return leftMin === 0;
 };
 </code></pre>
 <p>Write a function to find the longest common prefix string amongst an array of strings. If there is no common prefix, return an empty string "".</p>
@@ -1285,9 +1265,8 @@ var firstMissingPositive = function(nums) {
   const swap = (arr, i, j) =&gt; {
     [arr[i], arr[j]] = [arr[j], arr[i]];
   };
-  const n = nums.length;
 
-  // The answer lies within the range [1, n+1]
+  let n = nums.length;
   // Place each positive integer i at index i-1 if possible
   for (let i = 0; i &lt; n; i++) {
     while (nums[i] &gt; 0 &amp;&amp; nums[i] &lt;= n &amp;&amp; nums[i] !== nums[nums[i] - 1]) {
@@ -1997,23 +1976,26 @@ function reverse(nums, start, end) {
 <p>Given the root of a binary search tree, and an integer k, return the kth smallest value (1-indexed) of all the values of the nodes in the tree.</p>
 <pre><code class="lang-js">var kthSmallest = function(root, k) {
   // BST -&gt; in-order traversal
-  let n = 0;
   let stack = [];
   let current = root;
+  let count = 0;
 
-  while (stack.length &gt; 0 || current) {
-    while (current) {
+  while (stack.length &gt; 0 || current !== null) {
+    if (current !== null) {
       stack.push(current);
       current = current.left;
-    }
+    } else {
+      current = stack.pop();
+      count++;
 
-    current = stack.pop();
-    n++;
-    if (n === k) {
-      return current.val;
+      if (count === k) {
+        return current.val;
+      }
+
+      current = current.right;
     }
-    current = current.right;
-  }
+  } 
+  return null; // If k is greater than the number of nodes in the BST
 };
 </code></pre>
 <p>Given the root of a binary tree, imagine yourself standing on the right side of it, return the values of the nodes you can see ordered from top to bottom.</p>
@@ -2107,7 +2089,7 @@ function dfs(grid, i, j, rows, cols) {
 
   for (let i = 0; i &lt; m; i++) {
     for (let j = 0; j &lt; n; j++) {
-      if (backtrack(board, word, i, j, 0, visited))
+      if (dfs(board, word, i, j, 0, visited))
         return true;
     }
   }
@@ -2115,7 +2097,7 @@ function dfs(grid, i, j, rows, cols) {
 };
 
 // k is the current position in the word
-function backtrack(board, word, i, j, k, visited) {
+function dfs(board, word, i, j, k, visited) {
   let m = board.length;
   let n = board[0].length;
 
@@ -2123,15 +2105,15 @@ function backtrack(board, word, i, j, k, visited) {
     return true;
   }
 
-  if (i &lt; 0 || i &gt;= m || j &lt; 0 || j &gt;= n || visited[i][j] || board[i][j] !== word.charAt(k)) {
+  if (i &lt; 0 || i &gt; m-1 || j &lt; 0 || j &gt; n-1 || visited[i][j] || board[i][j] !== word.charAt(k)) {
     return false;
   }
 
   visited[i][j] = true;
-  if (backtrack(board, word, i + 1, j, k + 1, visited) ||
-      backtrack(board, word, i - 1, j, k + 1, visited) ||
-      backtrack(board, word, i, j + 1, k + 1, visited) ||
-      backtrack(board, word, i, j - 1, k + 1, visited))
+  if (dfs(board, word, i + 1, j, k + 1, visited) ||
+      dfs(board, word, i - 1, j, k + 1, visited) ||
+      dfs(board, word, i, j + 1, k + 1, visited) ||
+      dfs(board, word, i, j - 1, k + 1, visited))
       return true;
 
   visited[i][j] = false;
@@ -2213,6 +2195,27 @@ function backtrack(board, word, i, j, k, visited) {
     maxLength = Math.max(maxLength, dp[i]);
   }
   return maxLength;
+};
+</code></pre>
+<p>Given two strings text1 and text2, return the length of their longest common subsequence. If there is no common subsequence, return 0. For example, text1 = "abcde", text2 = "ace", then the longest common subsequence is "ace" and its length is 3.</p>
+<pre><code class="lang-js">var longestCommonSubsequence = function(text1, text2) {
+  let m = text1.length;
+  let n = text2.length;
+  // dp[i][j] means the LCS of first i characters in text1 and first j characters in text2
+  // 1. X[m-1] == Y[n-1] -&gt; LCS(Xm-1，Yn-1)
+  // 2. X[m-1] != Y[n-1] -&gt; max(LCS(Xm-1, Yn), LCS(Xm, Yn-1))
+  let dp = Array.from(Array(m + 1), () =&gt; Array(n + 1).fill(0));
+
+  for (let i = 1; i &lt;= m; i++) {
+    for (let j = 1; j &lt;= n; j++) {
+      if (text1[i - 1] === text2[j - 1]) {
+        dp[i][j] = dp[i - 1][j - 1] + 1;
+      } else {
+        dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
+      }  
+    }
+  }
+  return dp[m][n];
 };
 </code></pre>
 <p>Best Time to Buy and Sell Stock. You are given an array prices where <code>prices[i]</code> is the price of a given stock on the <code>ith</code> day.</p>
