--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -173,6 +173,17 @@ function clickOnce(el, cb) {
 clickOnce($0, () =&gt; console.log('click'));
 </code></pre>
 <ol>
+<li>Implement the <code>bind</code> function by yourself.</li>
+</ol>
+<pre><code class="lang-js">Function.prototype.myBind = function(context, ...args1) {
+  const fn = this;
+
+  return function(...args2) {
+    return fn.apply(context, [...args1, ...args2]);
+  };
+};
+</code></pre>
+<ol>
 <li><p>Use <code>setTimeout</code> to invoke a function multiple times in the fixed interval.
 ```js
 function repeat(func, times, ms, immediate) {
@@ -198,7 +209,7 @@ let count = 0;</p>
 const repeatFunc = repeat(console.log, 4, 3000, true);
 repeatFunc("hello");</p>
 <pre><code>
-7. Implement the render function to convert the virtual dom JSON to real DOM.
+8. Implement the render function to convert the virtual dom JSON to real DOM.
 ```js
 function render(vnode) {
   const { tag, props, children } = vnode;
@@ -252,7 +263,7 @@ console.log(get(obj, ['a', 'b', 'c'])); // 42
 console.log(get(obj, 'a.b.d', 'default')); // 'default'
 console.log(get(obj, 'x.y.z', 'not found')); // 'not found'</p>
 <pre><code>
-9. How to add two big integers in js?
+10. How to add two big integers in js?
 ```js
 function add(A, B) {
   const AL = A.length
