--- a/kexizeroing.github.io/Module bundler clone.html
+++ b/kexizeroing.github.io/Module bundler clone.html
@@ -6,10 +6,10 @@ slug: module-bundler
 description: ""
 added: "Oct 9 2021"
 tags: [code]</p>
-<h2>updatedDate: "Sep 5 2024"</h2>
+<h2>updatedDate: "Sep 6 2024"</h2>
 <p>The bundler will start from the entry file, and it will try to understand which files it depends on. Then, it will try to understand which files its dependencies depend on. It will keep doing that until it figures out about every module in the application, and how they depend on one another. This understanding of a project is called the <strong>dependency graph</strong>.</p>
-<pre><code class="lang-js">const Compiler = require('./compiler');
-const options = require('../webpack.config');
+<pre><code class="lang-js">const Compiler = require("./compiler");
+const options = require("../webpack.config");
 
 new Compiler(options).run();
 </code></pre>
@@ -112,4 +112,49 @@ module.exports = {
     return code;
   },
 };
+</code></pre>
+<p>Below is an example of a Webpack plugin: a BannerPlugin. This plugin adds a banner or comment to the top of each generated file. It's simple but demonstrates how Webpack plugins interact with the compilation process.</p>
+<p>The <code>apply</code> method is Webpack's way of registering a plugin and giving it access to the <code>compiler</code> object. Webpack calls <code>apply</code> during the initialization phase, before the build process begins, allowing the plugin to set up event hooks and modify the build as necessary.</p>
+<ul>
+<li><code>compilation.assets</code>: It's an object that represents all the files Webpack will emit.</li>
+<li><code>compilation.assets['bundle.js'].source()</code>: Retrieves the actual content of the asset as a string or a buffer.</li>
+<li><code>compilation.assets['bundle.js'].size()</code>: Returns the size of the asset's content in bytes, helping Webpack manage and report asset sizes accurately.</li>
+</ul>
+<pre><code class="lang-js">class SimpleBannerPlugin {
+  constructor(options) {
+    this.options = options;
+  }
+
+  apply(compiler) {
+    // Hook into the 'emit' phase of Webpack's lifecycle
+    compiler.hooks.emit.tap("SimpleBannerPlugin", (compilation) =&gt; {
+      // Iterate over all compiled assets (output files)
+      for (const filename in compilation.assets) {
+        if (Object.hasOwnProperty.call(compilation.assets, filename)) {
+          // Get the original file content
+          const originalSource = compilation.assets[filename].source();
+          // Create the banner text
+          const banner = `/** ${this.options.banner} */\n`;
+          // Concatenate the banner with the original content
+          const newSource = banner + originalSource;
+
+          // Replace the original asset content with the new content
+          compilation.assets[filename] = {
+            source: () =&gt; newSource,
+            size: () =&gt; newSource.length,
+          };
+        }
+      }
+    });
+  }
+}
+
+module.exports = SimpleBannerPlugin;
+
+// const SimpleBannerPlugin = require('./SimpleBannerPlugin');
+// module.exports = {
+//   plugins: [
+//     new SimpleBannerPlugin({ banner: 'This is a banner!' })
+//   ]
+// };
 </code></pre>
