--- a/f2h2h1.github.io/在Windows下安装Magento2.html
+++ b/f2h2h1.github.io/在Windows下安装Magento2.html
@@ -214,7 +214,7 @@
 </ul>
 </li>
 <li>magento2 的运行效率真的很低</li>
-<li>可以在 magento 的根目录里运行这样的命令启动 php 的内置 web server ，但速度真的很慢，要注意修改 base-url<pre><code>  php -S 127.0.0.1:8082 -t ./pub/ ./phpserver/router.php
+<li>可以在 magento 的根目录里运行这样的命令启动 php 的内置 web server ，但速度真的很慢，要注意修改 base-url ，可以通过修改 DEBUG_ROUTER 这个常量启用 router.php 的 debug 模式<pre><code>  php -S 127.0.0.1:8082 -t ./pub/ ./phpserver/router.php
 </code></pre>
 </li>
 <li>magento2 的缓存十分严重，如果发现一些修改没有生效，可以尝试运行这几条命令刷新缓存<pre><code>  php bin/magento cache:clean
@@ -290,6 +290,9 @@
 <li>如果是开发者模式就不要运行这句</li>
 </ul>
 </li>
+<li>运行部署静态文件这条命令时最好翻墙，不然一些字体文件没法下载<pre><code>  php bin/magento setup:static-content:deploy
+</code></pre>
+</li>
 <li>打开浏览器的开发者工具时，关掉禁用缓存的选项也能提升速度， magento2 的静态文件真的非常多，但有时又会因为浏览器的缓存这样观察不到更新</li>
 <li>使用 imdisk 这类内存硬盘能有效地提升速度。但内存硬盘存在断电后数据丢失的风险，而且真的非常消耗内存，内存至少也要有 16G<ul>
 <li>只把生成的目录和文件放在内存硬盘里，这里需要用软连接把 var 和 generated 文件夹映射到内存硬盘</li>
@@ -299,6 +302,7 @@
 </li>
 <li>可以使用 Papercut-SMTP 这类软件来接收测试的邮件</li>
 <li>浏览器禁用图片的加载也能有效地提升速度</li>
+<li>magento2 有三种模式，按性能由低到高，依次为：developer &lt; default &lt; production ；除此之外还有一个维护模式 maintenance ，用户访问会返回 503</li>
 </ul>
 <p>除了可以通过 compoer 安装外，还可以通过 github 的仓库安装。</p>
 <ul>
@@ -324,7 +328,14 @@
 <li>通过 github 源码安装的 magento 的框架文件在这个目录里 <code>lib/internal/Magento/Framework</code></li>
 <li>如果是通过 github 修改源码的，要记得替换架的路径</li>
 <li>github 代码里的 app/magento/ 下那一堆 模块 对应 通过 composer 安装的 vendor/magento/module-* 的模块</li>
-<li><p>如果 clone 速度太慢，可以在 releases 那里下载源码的压缩包（如果还是太慢就用一些下载工具来下载 releases 的压缩包）</p>
+<li>如果 clone 速度太慢，可以在 releases 那里下载源码的压缩包（如果还是太慢就用一些下载工具来下载 releases 的压缩包）</li>
+<li><p>如果没有开启url重写，大部分链接前面都会带着 index.php，如果开了url重写则没有 index.php</p>
+<ul>
+<li>例如 后台的链接<pre><code>  没有url重写 /index.php/admin
+  有url重写 /admin
+</code></pre>
+</li>
+</ul>
 </li>
 <li><p>配置 vscode 的 xml 文件语法高亮</p>
 <ol>
@@ -371,7 +382,8 @@
 <li>php 需要 7.4</li>
 <li>还有就是 composer 需要 2 以上版本</li>
 </ul>
-<p>因为 Elasticsearch 的存在使得门槛高了不少。笔者感觉奥多比正在抛弃中小用户。</p>
+<p>因为 Elasticsearch 的存在使得门槛高了不少。笔者感觉奥多比正在抛弃中小用户。
+笔者感到很奇怪，没有 redis 也可以安装，但没有 Elasticsearch 却不行。</p>
 <p>安装流程和注意事项和 2.3 的基本一致。</p>
 <h3>安装 Elasticsearch</h3>
 <p>2.4.0 依赖的 elasticsearch 版本为 7.6 。</p>
@@ -427,6 +439,101 @@ $cacheId = implode('-', $this-&gt;scopePriorityScheme) . "-" . $this-&gt;cacheId
 <li><p>进入后台之前需要禁用两步验证的模块和刷新缓存，不然会因为没有两步验证而无法进入后台, Magento_TwoFactorAuth 这个模块好像社区版没有</p>
 <pre><code> php bin/magento module:disable Magento_TwoFactorAuth
  php bin/magento cache:flush
+</code></pre>
+</li>
+</ol>
+<h2>2.4 但不使用 es</h2>
+<p>禁用 es 相关的模块，用这个库来替换</p>
+<pre><code>https://github.com/swissup/module-search-mysql-legacy
+</code></pre>
+<h3>安装时就排除 es</h3>
+<ol>
+<li>修改安装命令<ol>
+<li>排除 es 相关的配置<pre><code> 就是安装命令里删掉这几个参数
+ --search-engine
+ --elasticsearch-host
+ --elasticsearch-port
+ --elasticsearch-index-prefix
+</code></pre>
+</li>
+<li>禁用 es 相关的模块<pre><code> 就是安装命令里加上这一个参数
+ --disable-modules=Magento_Elasticsearch,Magento_Elasticsearch7,Magento_OpenSearch
+ 2.4 的小版本里，有好几个和 es 相关的模块
+ Magento_Elasticsearch
+ Magento_Elasticsearch6
+ Magento_Elasticsearch7
+ Magento_InventoryElasticsearch
+ Magento_OpenSearch
+</code></pre>
+</li>
+<li>比较完整的安装命令，但仅供参考<pre><code> php bin/magento setup:install  \
+     --base-url=http://localhost-magento.com/  \
+     --db-host=localhost  \
+     --db-name=magento2ce  \
+     --db-user=root  \
+     --db-password=1234  \
+     --admin-firstname=admin  \
+     --admin-lastname=admin  \
+     --admin-email=admin@admin.com  \
+     --admin-user=admin  \
+     --admin-password=admin123  \
+     --language=en_US  \
+     --currency=USD  \
+     --timezone=Asia/Shanghai  \
+     --use-rewrites=0 \
+     --disable-modules=Magento_Elasticsearch,Magento_Elasticsearch7,Magento_OpenSearch
+</code></pre>
+</li>
+</ol>
+</li>
+<li>安装 mysql 搜索模块<pre><code> composer require swissup/module-search-mysql-legacy --prefer-source --ignore-platform-reqs
+</code></pre>
+</li>
+<li>启用 mysql 搜索模块<pre><code> php bin/magento module:enable Swissup_SearchMysqlLegacy Swissup_Core
+ php bin/magento setup:upgrade --safe-mode=1
+ php bin/magento setup:di:compile
+</code></pre>
+</li>
+<li>把搜索的引擎设为 mysql<ul>
+<li>用命令行设置<pre><code>  php bin/magento config:set catalog/search/engine 'lmysql'
+</code></pre>
+</li>
+<li>在后台设置<pre><code>  AdminPortal &gt; Store &gt; Settings &gt; Configuration &gt; CATALOG &gt; Catalog &gt; Catalog Search &gt; Search Engine
+</code></pre>
+</li>
+</ul>
+</li>
+<li>刷新索引<pre><code> php bin/magento indexer:reindex
+</code></pre>
+</li>
+</ol>
+<h3>安装完后再排除 es</h3>
+<ol>
+<li>进入维护模式<pre><code> php bin/magento maintenance:enable
+</code></pre>
+</li>
+<li>禁用 es 相关的模块<pre><code> php bin/magento module:disable Magento_Elasticsearch Magento_Elasticsearch7 Magento_OpenSearch
+ 2.4 的小版本里，有好几个和 es 相关的模块
+ 最好先用 php bin/magento module:status 看看有哪些和 es 相关的模块再禁用
+</code></pre>
+</li>
+<li>安装 mysql 搜索模块<ul>
+<li>和上一节一样</li>
+</ul>
+</li>
+<li>启用 mysql 搜索模块<ul>
+<li>和上一节一样</li>
+</ul>
+</li>
+<li>把搜索的引擎设为 mysql<ul>
+<li>和上一节一样</li>
+</ul>
+</li>
+<li>刷新索引<ul>
+<li>和上一节一样</li>
+</ul>
+</li>
+<li>退出维护模式<pre><code> php bin/magento maintenance:disable
 </code></pre>
 </li>
 </ol>
@@ -600,10 +707,41 @@ echo $startAtTimestamp $endAtTimestamp | awk '{printf("Runtime: %d\n", $2-$1)}'
 php bin/magento --version
 
 magento 的备份命令
-如何不使用 es 安装 2.4及之后的版本
+备份功能自2.1.16、2.2.7和2.3.0起已弃用。我们建议研究其他备份技术和二进制备份工具（如Percona XtraBackup）。
+
+默认情况下备份功能会禁用，要先启用备份功能
+php bin/magento config:set system/backup/functionality_enabled 1
+
+备份和恢复备份都需要先进入维护模式
+
+备份
+bin/magento setup:backup [--code] [--media] [--db]
+
+查看已有的备份
+php bin/magento info:backups:list
+
+恢复备份
+php bin/magento setup:rollback [-c|--code-file="&lt;name&gt;"] [-m|--media-file="&lt;name&gt;"] [-d|--db-file="&lt;name&gt;"]
+
+选项  含义  备份文件名和位置
+--code  备份文件系统（var和pub/static目录除外）。 var/backups/&lt;timestamp&gt;/_filesystem.tgz
+--media 备份pub/media目录   var/backups/&lt;timestamp&gt;/_filesystem_media.tgz
+--db    备份数据库。  var/backups/&lt;timestamp&gt;/_db.sql
+
+
+新建一个这样的文件就是进入维护模式了，把这个文件删了就是退出维护模式了
+var/.maintenance.flag
 
 如何升级 magento
 升级 magento 时要注意些什么
+
+
+修改 base-url
+php bin/magento setup:store-config:set --base-url="http://localhost-magento.com/"
+
+
+查看所有模块
+php bin/magento module:status
 
 
 --&gt;
