--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8881 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8885 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%9C%A8WSL%E4%B8%8A%E5%AE%89%E8%A3%85%E5%92%8C%E4%BD%BF%E7%94%A8MySQL.html>2024-09-08 在WSL上安装和使用MySQL</a></li>
+
+<li><a href=blog.mauve.icu/%E3%80%8A%E9%BB%91%E7%A5%9E%E8%AF%9D%3A%E6%82%9F%E7%A9%BA%E3%80%8B%E6%B8%B8%E7%8E%A9%E8%AF%84%E6%B5%8B.html>2024-09-08 《黑神话:悟空》游玩评测</a></li>
+
+<li><a href=yuanj.top/%E6%96%87%E7%8C%AE%E5%88%86%E4%BA%AB%7C%E5%8D%95%E7%BB%86%E8%83%9E%E8%BD%AC%E5%BD%95%E7%BB%84%E5%9B%BE%E8%B0%B1%E6%8F%AD%E7%A4%BA%E6%8B%9F%E5%8D%97%E8%8A%A5%E6%84%88%E4%BC%A4%E7%BB%84%E7%BB%87%E8%AF%B1%E5%AF%BC%E8%BF%87%E7%A8%8B%E4%B8%AD%E6%97%A9%E6%9C%9F%E7%BB%86%E8%83%9E%E5%91%BD%E8%BF%90%E8%BD%AC%E5%8F%98%E8%BD%A8%E8%BF%B9.html>2024-09-07 文献分享|单细胞转录组图谱揭示拟南芥愈伤组织诱导过程中早期细胞命运转变轨迹</a></li>
+
+<li><a href=codeinchinese.com/%E7%8E%B0%E5%9C%A8%E4%B8%9A%E7%95%8C%E6%98%AF%E5%90%A6%E9%9C%80%E8%A6%81%E6%96%B0%E7%9A%84%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%EF%BC%9F%E5%A6%82%E6%9E%9C%E9%9C%80%E8%A6%81%EF%BC%8C%E9%82%A3%E9%9C%80%E8%A6%81%E4%BB%80%E4%B9%88%E7%B1%BB%E5%9E%8B%E7%9A%84%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%EF%BC%9F.html>2024-09-07 现在业界是否需要新的编程语言？如果需要，那需要什么类型的编程语言？</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20376%20%E7%BB%93%E6%9D%9F%E4%BA%86%E5%9C%A8%E4%B8%AD%E5%9B%BD%E7%9A%84%E6%97%85%E8%A1%8C.html>2024-09-06 新爸五年计划 - 376 结束了在中国的旅行</a></li>
 
@@ -29,7 +37,7 @@
 
 <li><a href=www.zhaohuabing.com/%E8%B6%85%E8%B6%8A%20Gateway%20API%EF%BC%9A%E6%B7%B1%E5%85%A5%E6%8E%A2%E7%B4%A2%20Envoy%20Gateway%20%E7%9A%84%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD%EF%BC%88%E6%9C%AA%E5%AE%8C%E6%88%90%EF%BC%89.html>2024-08-31 超越 Gateway API：深入探索 Envoy Gateway 的扩展功能（未完成）</a></li>
 
-<li><a href=yuanj.top/%E6%8B%9F%E5%8D%97%E8%8A%A5%E6%A0%B9%E9%83%A8%E7%9A%84%E5%8D%95%E7%BB%86%E8%83%9E%E5%88%86%E8%BE%A8%E7%8E%87%E8%B0%83%E6%8E%A7%E6%99%AF%E8%A7%82.html>2024-08-30 拟南芥根部的单细胞分辨率调控景观</a></li>
+<li><a href=yuanj.top/%E6%96%87%E7%8C%AE%E5%88%86%E4%BA%AB%7C%E6%8B%9F%E5%8D%97%E8%8A%A5%E6%A0%B9%E9%83%A8%E7%9A%84%E5%8D%95%E7%BB%86%E8%83%9E%E5%88%86%E8%BE%A8%E7%8E%87%E8%B0%83%E6%8E%A7%E6%99%AF%E8%A7%82.html>2024-08-30 文献分享|拟南芥根部的单细胞分辨率调控景观</a></li>
 
 <li><a href=babyno.top/Markdown%E6%8E%92%E7%89%88%E7%BE%8E%E5%8C%96%E5%B7%A5%E5%85%B7%EF%BC%9A%E6%96%87%E9%A2%9C.html>2024-08-30 Markdown排版美化工具：文颜</a></li>
 
