--- a/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
+++ b/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
@@ -157,7 +157,11 @@ Dockerfile
 <li><p><strong>Ingress Controller</strong>: Kubernetes Ingress is an API object that manages external users’ access to services in a Kubernetes cluster by providing routing rules. This external request is frequently made using HTTPS/HTTP. You can easily set up rules for traffic routing with Ingress without having to create a bunch of Load Balancers or expose each service on the node.</p>
 </li>
 </ul>
-<blockquote><p>The Illustrated Children's Guide to Kubernetes: <a href="https://www.cncf.io/phippy/the-childrens-illustrated-guide-to-kubernetes/">https://www.cncf.io/phippy/the-childrens-illustrated-guide-to-kubernetes/</a></p>
+<blockquote><p>Learning resources:</p>
+<ul>
+<li>The Illustrated Children's Guide to Kubernetes: <a href="https://www.cncf.io/phippy/the-childrens-illustrated-guide-to-kubernetes/">https://www.cncf.io/phippy/the-childrens-illustrated-guide-to-kubernetes/</a></li>
+<li>Kubernetes Essentials IBM lightboarding video: <a href="https://www.youtube.com/playlist?list=PLOspHqNVtKABAVX4azqPIu6UfsPzSu2YN">https://www.youtube.com/playlist?list=PLOspHqNVtKABAVX4azqPIu6UfsPzSu2YN</a></li>
+</ul>
 </blockquote>
 <p>Let's look at an example. The Kubernetes configuration file (<code>deployment.yaml</code>) contains two parts because it defines two separate Kubernetes resources. Deployment manages the application instances (pods). Service manages network access to those instances.</p>
 <pre><code class="lang-yaml">apiVersion: apps/v1
