--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8885 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8886 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
@@ -16,6 +16,8 @@
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%9C%A8WSL%E4%B8%8A%E5%AE%89%E8%A3%85%E5%92%8C%E4%BD%BF%E7%94%A8MySQL.html>2024-09-08 在WSL上安装和使用MySQL</a></li>
 
 <li><a href=blog.mauve.icu/%E3%80%8A%E9%BB%91%E7%A5%9E%E8%AF%9D%3A%E6%82%9F%E7%A9%BA%E3%80%8B%E6%B8%B8%E7%8E%A9%E8%AF%84%E6%B5%8B.html>2024-09-08 《黑神话:悟空》游玩评测</a></li>
+
+<li><a href=informal.top/Weekly-%233%20PopTranslate.html>2024-09-08 Weekly-#3 PopTranslate</a></li>
 
 <li><a href=yuanj.top/%E6%96%87%E7%8C%AE%E5%88%86%E4%BA%AB%7C%E5%8D%95%E7%BB%86%E8%83%9E%E8%BD%AC%E5%BD%95%E7%BB%84%E5%9B%BE%E8%B0%B1%E6%8F%AD%E7%A4%BA%E6%8B%9F%E5%8D%97%E8%8A%A5%E6%84%88%E4%BC%A4%E7%BB%84%E7%BB%87%E8%AF%B1%E5%AF%BC%E8%BF%87%E7%A8%8B%E4%B8%AD%E6%97%A9%E6%9C%9F%E7%BB%86%E8%83%9E%E5%91%BD%E8%BF%90%E8%BD%AC%E5%8F%98%E8%BD%A8%E8%BF%B9.html>2024-09-07 文献分享|单细胞转录组图谱揭示拟南芥愈伤组织诱导过程中早期细胞命运转变轨迹</a></li>
 
@@ -31,7 +33,7 @@
 
 <li><a href=qingbob.com/%E6%96%B0%20AI%EF%BC%8C%E6%97%A7%E7%A7%A9%E5%BA%8F.html>2024-09-02 新 AI，旧秩序</a></li>
 
-<li><a href=informal.top/second%20product.html>2024-09-01 second product</a></li>
+<li><a href=informal.top/Weekly-%232%20The%20fail%20of%20first%20product.html>2024-09-01 Weekly-#2 The fail of first product</a></li>
 
 <li><a href=sund.site/Windows%20Efficient%20Setup.html>2024-08-31 Windows Efficient Setup</a></li>
 
@@ -43,7 +45,7 @@
 
 <li><a href=iphyer.github.io/The%20Power%20of%20Precision%3A%20Revolutionize%20Your%20Writing%20in%20Three%20Steps.html>2024-08-30 The Power of Precision: Revolutionize Your Writing in Three Steps</a></li>
 
-<li><a href=informal.top/First%20week%20of%20indie%20develop.html>2024-08-25 First week of indie develop</a></li>
+<li><a href=informal.top/Weekly-%231%20First%20week%20of%20indie%20develop.html>2024-08-25 Weekly-#1 First week of indie develop</a></li>
 
 <li><a href=kexizeroing.github.io/Demystifying%20HMR%20and%20Source%20Maps.html>2024-08-24 Demystifying HMR and Source Maps</a></li>
 
