--- a/kexizeroing.github.io/Module bundler clone.html
+++ b/kexizeroing.github.io/Module bundler clone.html
@@ -113,6 +113,8 @@ module.exports = {
   },
 };
 </code></pre>
+<blockquote><p>Babel Plugin Handbook: <a href="https://github.com/jamiebuilds/babel-handbook/blob/master/translations/en/plugin-handbook.md">https://github.com/jamiebuilds/babel-handbook/blob/master/translations/en/plugin-handbook.md</a></p>
+</blockquote>
 <p>Below is an example of a Webpack plugin: a BannerPlugin. This plugin adds a banner or comment to the top of each generated file. It's simple but demonstrates how Webpack plugins interact with the compilation process.</p>
 <p>The <code>apply</code> method is Webpack's way of registering a plugin and giving it access to the <code>compiler</code> object. Webpack calls <code>apply</code> during the initialization phase, before the build process begins, allowing the plugin to set up event hooks and modify the build as necessary.</p>
 <ul>
