--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -6,7 +6,7 @@ slug: rendering-performance
 description: ""
 added: "Oct 16 2021"
 tags: [web]</p>
-<h2>updatedDate: "Jun 13 2024"</h2>
+<h2>updatedDate: "Sep 9 2024"</h2>
 <p>One factor contributing to a poor user experience is how long it takes a user to see any content rendered to the screen. <strong>First Contentful Paint (FCP)</strong> measures how long it takes for initial DOM content to render, but it does not capture how long it took the largest (usually more meaningful) content on the page to render. <strong>Largest Contentful Paint (LCP)</strong> measures when the largest content element in the viewport becomes visible. It can be used to determine when the main content of the page has finished rendering on the screen.</p>
 <h3>Core Web Vitals</h3>
 <p>Core Web Vitals are the subset of Web Vitals that apply to all web pages, should be measured by all site owners, and will be surfaced across all Google tools. The metrics that make up Core Web Vitals will evolve over time. The current set for 2020 focuses on three aspects of the user experience—<em>loading, interactivity, and visual stability</em>—and includes the following metrics:</p>
@@ -165,6 +165,16 @@ window.performance.getEntriesByType('resource')
 // Use the PerformanceNavigationTiming interface instead
 performance.getEntriesByType('navigation')[0]
 </code></pre>
+<h3>Back/forward cache</h3>
+<p>bfcache has been supported in both Firefox and Safari for many years. Since Chrome version 96, bfcache is enabled for all users across desktop and mobile. bfcache is an in-memory cache that stores a complete snapshot of a page (including the JavaScript heap) as the user is navigating away. With the entire page in memory, the browser can quickly restore it if the user decides to return.</p>
+<ol>
+<li>If a page contains embedded iframes, then the iframes themselves are not eligible for the bfcache. For example, if you navigate to another page within an iframe, but then go back, the browser will go "back" within the iframe rather than in the main frame, but the back navigation within the iframe won't use the bfcache.</li>
+<li>Because bfcache works with browser-managed navigations, it doesn't work for "soft navigations" within a single-page app.</li>
+<li>The <code>pageshow</code> event fires right after the <code>load</code> event when the page is initially loading and any time the page is restored from bfcache. The <code>pageshow</code> event has a <code>persisted</code> property, which is true if the page was restored from bfcache and false otherwise.</li>
+<li>The most important way to optimize for bfcache in all browsers is to never use the <code>unload</code> event. This event is extremely unreliable. In most browsers, especially on mobile, the code often won't run and it has a negative impact on a site's performance, by preventing the usage of bfcache. Use the <code>pagehide</code> event instead.</li>
+<li>Any pages using <code>Cache-Control: no-store</code> won't be eligible for bfcache.</li>
+<li>When a page is put into the bfcache, it pauses all scheduled JavaScript tasks and resumes them when the page is taken out of the cache. If your page has open IndexedDB connection, in-progress fetch, or open WebSocket connection, we strongly recommend closing connections during the <code>pagehide</code> and reopen or reconnect to those APIs during the <code>pageshow</code> event when the page is restored from the bfcache.</li>
+</ol>
 <h3>Best practices for fonts</h3>
 <ul>
 <li><a href="https://web.dev/font-best-practices">https://web.dev/font-best-practices</a></li>
