--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Sep 8 2024"</h2>
+<h2>updatedDate: "Sep 9 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -108,28 +108,22 @@ order: 4</p>
 }
 
 function partition(nums, left, right) {
-  let pivot = nums[left]
-
-  while (left &lt; right) {
-    while (left &lt; right &amp;&amp; nums[right] &gt;= pivot) {
-      right--;
+  let pivot = nums[right];
+  let i = left;
+  for (let j = left; j &lt; right; j++) {
+    if (nums[j] &lt;= pivot) {
+      swap(nums, i, j);
+      i++;
     }
-    nums[left] = nums[right];
-
-    while (left &lt; right &amp;&amp; nums[left] &lt;= pivot) {
-      left++;
-    }
-    nums[right] = nums[left];
   }
-
-  nums[left] = pivot;
-  return left;
+  swap(nums, i, right);
+  return i;
 }
 </code></pre>
 <blockquote><ol>
 <li><p>Quick sort is an in-place algorithm, but the stack due to recursive calls adds additional storage space proportional to the recursive depth.</p>
 </li>
-<li><p>It's not recommended to choose the first or last element to be the pivot, your pivot value is always the largest value on already sorted or nearly sorted arrays. So rather than splitting the array into two roughly equal subarrays, you split it into a single sub array that has only one fewer element than you started with. One way to choose the pivot to avoid this is to pick the pivot randomly. This makes it unlikely to hit the worst case, and so on average will work well.</p>
+<li><p>It's not recommended to choose the first or last element to be the pivot, your pivot value is always the largest value on already sorted or nearly sorted arrays. So rather than splitting the array into two roughly equal subarrays, you split it into a single sub array that has only one fewer element than you started with. One way to choose the pivot to avoid this is to pick the pivot randomly <em>(or choose the median of the first, middle and last element)</em>. This makes it unlikely to hit the worst case, and so on average will work well.</p>
 </li>
 </ol>
 </blockquote>
@@ -252,46 +246,6 @@ function reverseList(head) {
   }
 
   return prev;
-}
-
-// Reverse nodes in k-Group
-// [1,2,3,4,5], k = 2 -&gt; [2,1,4,3,5]
-// [1,2,3,4,5], k = 3 -&gt; [3,2,1,4,5]
-function reverseKGroup(head, k) {
-  if (k === 1) return head;
-
-  let dummy = new ListNode(0);
-  dummy.next = head;
-  let prevGroupTail = dummy;
-
-  while (head) {
-    let groupStart = head;
-    let groupEnd = getGroupEnd(head, k);
-
-    // If we don't have k nodes left
-    if (!groupEnd) break;
-
-    let nextGroupStart = groupEnd.next;
-    reverseList(groupStart, nextGroupStart);
-
-    // Connect the reversed group
-    prevGroupTail.next = groupEnd;
-    groupStart.next = nextGroupStart;
-
-    prevGroupTail = groupStart;
-    head = nextGroupStart;
-  }
-
-  return dummy.next;
-};
-
-// helper function to get the end of the group
-function getGroupEnd(head, k) {
-  while (head &amp;&amp; k &gt; 1) {
-    head = head.next;
-    k--;
-  }
-  return head;
 }
 
 // fast pointer moves forward `n` steps first,
@@ -468,6 +422,12 @@ var levelOrderTraversal = function(root) {
         nodeQueue.push(curNode.right);
       }
     }
+
+    // Reverse the order for zigzag pattern
+    // if (!isLeftToRight) {
+    //   level.reverse();
+    // }
+    // isLeftToRight = !isLeftToRight;
     result.push(level);
   }
 
