--- a/kexizeroing.github.io/Create a video player.html
+++ b/kexizeroing.github.io/Create a video player.html
@@ -305,4 +305,5 @@ function requestFullscreenVideo() {
 <li><a href="https://github.com/bytedance/xgplayer">https://github.com/bytedance/xgplayer</a></li>
 <li><a href="https://github.com/DIYgod/DPlayer">https://github.com/DIYgod/DPlayer</a></li>
 <li><a href="https://github.com/sampotts/plyr">https://github.com/sampotts/plyr</a></li>
+<li><a href="https://github.com/muxinc/media-chrome">https://github.com/muxinc/media-chrome</a></li>
 </ul>
